# etl

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt
src/etl/: __init__.py  _etl.py  _runnable.py  _runner.py  _types.py  _utils.py  allocator.py  common.py  etl.py  exceptions.py  executable.py  executor.py  extract.py  load.py  metadata_handler.py  pipe.py  policy.py  scheduler.py  task.py  transform.py
