[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saurabh Baghel", email = "saurabh.baghel@statxo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv-python",
    "polars",
    "psycopg2",
    "asyncpg",
    "pyarrow"
]

[project.scripts]
etl = "etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
