[project]
name = "etl"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saurabh Baghel", email = "saurabh.baghel@statxo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv-python",
    "polars",
    "psycopg2",
    "asyncpg",
    "pyarrow",
    "fastapi>=0.120.0",
    "uvicorn>=0.38.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.3",
    "ipykernel",
]

[project.scripts]
etl = "etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
