[project]
name = "etl"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saurabh Baghel", email = "saurabh.baghel@statxo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars",
    "psycopg2",
    "asyncpg",
    "pyarrow",
    "fastapi>=0.120.0",
    "uvicorn>=0.38.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.3",
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "black",
    "isort",
]

[project.scripts]
etl = "etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/etl"]

exclude = [
    "tests",
    "scripts",
    ".env",
    "notebooks",
    ".vscode",
    ".pytest_cache",
    "__pycache__",
    "internal_README.md",
    ".demo_state.txt",
    ".prev-jobs.csv",
    "logs",
    "api",
    "test",
    "data",
    "CHANGELOG.md",
    ".mypy_cache",
    ".test",
    ".venv"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 100
extend-select = ["E", "F", "I", "B"]